# analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
doc/source/: conf.py  index.rst  src.rst
model/model/: nn1-0-scaler.pkl  nn1-1-scaler.pkl  nn1-3-scaler.pkl
model/pred/: nn1-train.pkl
model_archived/model/: nn1-2-scaler.pkl
model_archived/pred/: xgb1-train.pkl
src/: __init__.py  calc_score.py  config.py  create_folds.py  func_util.py  interface.py  metrics.py  model.py  model_dispatcher.py  model_linear.py  model_nn.py  model_xgb.py  models.py  run.sh  runner.py  runner_project.py  runner_setting.py  train.py  util.py
src/metrics/: __init__.py  metrics.py  plot.py
src/models/: __init__.py  interface.py  model_ae.py  model_anomary_detection.py  model_auto_encoder.py  model_auto_encoder_lgb.py  model_decision_tree.py  model_dt.py  model_lgb.py  model_lr.py  model_naive_bayes.py  model_nb.py  model_random_forest.py  model_rf.py  model_svm.py  model_xgb.py  util.py
src_archived/: model_linear.py  model_nn.py  model_xgb.py  run.py  runner.py  runner_project.py  runner_setting.py  util.py
src_new/: config.py  create_folds.py  interface.py  model_dispatcher.py  models.py  run.sh  train.py
tests/: test_util.py
