[tool.poetry]
name = "bunseki"
version = "0.1.0"
description = "Analysis utilities"
authors = ["Takahiro Konno <t.konno@shishimaro.co.jp>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
tensorflow = "^2.3.1"
pandas = "^1.1.2"
xgboost = "^1.2.0"
lightgbm = "^3.0.0"
keras = "^2.4.3"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
pytest = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
